// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RigComponent /> renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RigComponent
    saveManifest={[Function]}
    session={
        Object {
            "authToken": "test",
            "displayName": "test",
            "id": "test",
            "login": "test",
            "profileImageUrl": "test.png",
          }
    }
    userLogin={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(RigNavComponent)
          error={undefined}
          openConfigurationsHandler={[Function]}
          openProductManagementHandler={[Function]}
          selectedView="Extension Views"
          viewerHandler={[Function]}
/>,
        <label>
          loading...
</label>,
      ],
      "className": "rig-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "error": undefined,
          "openConfigurationsHandler": [Function],
          "openProductManagementHandler": [Function],
          "selectedView": "Extension Views",
          "viewerHandler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "loading...",
        },
        "ref": null,
        "rendered": "loading...",
        "type": "label",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(RigNavComponent)
            error={undefined}
            openConfigurationsHandler={[Function]}
            openProductManagementHandler={[Function]}
            selectedView="Extension Views"
            viewerHandler={[Function]}
/>,
          <label>
            loading...
</label>,
        ],
        "className": "rig-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "error": undefined,
            "openConfigurationsHandler": [Function],
            "openProductManagementHandler": [Function],
            "selectedView": "Extension Views",
            "viewerHandler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "loading...",
          },
          "ref": null,
          "rendered": "loading...",
          "type": "label",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<RigComponent /> renders extension view correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RigComponent
    saveManifest={[Function]}
    session={
        Object {
            "authToken": "test",
            "displayName": "test",
            "id": "test",
            "login": "test",
            "profileImageUrl": "test.png",
          }
    }
    userLogin={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Connect(RigNavComponent)
          error={undefined}
          openConfigurationsHandler={[Function]}
          openProductManagementHandler={[Function]}
          selectedView="Extension Views"
          viewerHandler={[Function]}
/>,
        <div>
          <ExtensionViewContainer
                    deleteExtensionViewHandler={[Function]}
                    extensionViews={
                              Array [
                                        Object {
                                          "channelId": "twitch",
                                          "features": Object {
                                            "isChatEnabled": true,
                                          },
                                          "id": "1",
                                          "isPopout": false,
                                          "linked": false,
                                          "linkedUserId": "",
                                          "mode": "viewer",
                                          "opaqueId": "ARIGopaqueId",
                                          "orientation": "Portrait",
                                          "role": "Logged-Out Viewer",
                                          "type": "Panel",
                                          "x": 0,
                                          "y": 0,
                                        },
                                      ]
                    }
                    manifest={
                              Object {
                                        "authorName": "test",
                                        "bitsEnabled": true,
                                        "description": "test",
                                        "iconUrls": Object {
                                          "100x100": "test",
                                        },
                                        "id": "test",
                                        "name": "test",
                                        "requestIdentityLink": false,
                                        "sku": "test",
                                        "state": "test",
                                        "summary": "test",
                                        "vendorCode": "test",
                                        "version": "0.0.1",
                                        "views": Object {
                                          "component": Object {
                                            "aspectHeight": 3000,
                                            "aspectWidth": 2500,
                                            "canLinkExternalContent": false,
                                            "size": 1024,
                                            "viewerUrl": "test",
                                            "zoom": false,
                                            "zoomPixels": 24,
                                          },
                                          "config": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "test",
                                          },
                                          "liveConfig": Object {
                                            "canLinkExternalContent": false,
                                            "viewerUrl": "test",
                                          },
                                          "panel": Object {
                                            "canLinkExternalContent": false,
                                            "height": 300,
                                            "viewerUrl": "test",
                                          },
                                        },
                                        "whitelistedConfigUrls": Array [],
                                        "whitelistedPanelUrls": Array [],
                                      }
                    }
                    openEditViewHandler={[Function]}
                    openExtensionViewHandler={[Function]}
                    secret="test"
          />
          <Console />
</div>,
      ],
      "className": "rig-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "error": undefined,
          "openConfigurationsHandler": [Function],
          "openProductManagementHandler": [Function],
          "selectedView": "Extension Views",
          "viewerHandler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ExtensionViewContainer
              deleteExtensionViewHandler={[Function]}
              extensionViews={
                            Array [
                                          Object {
                                            "channelId": "twitch",
                                            "features": Object {
                                              "isChatEnabled": true,
                                            },
                                            "id": "1",
                                            "isPopout": false,
                                            "linked": false,
                                            "linkedUserId": "",
                                            "mode": "viewer",
                                            "opaqueId": "ARIGopaqueId",
                                            "orientation": "Portrait",
                                            "role": "Logged-Out Viewer",
                                            "type": "Panel",
                                            "x": 0,
                                            "y": 0,
                                          },
                                        ]
              }
              manifest={
                            Object {
                                          "authorName": "test",
                                          "bitsEnabled": true,
                                          "description": "test",
                                          "iconUrls": Object {
                                            "100x100": "test",
                                          },
                                          "id": "test",
                                          "name": "test",
                                          "requestIdentityLink": false,
                                          "sku": "test",
                                          "state": "test",
                                          "summary": "test",
                                          "vendorCode": "test",
                                          "version": "0.0.1",
                                          "views": Object {
                                            "component": Object {
                                              "aspectHeight": 3000,
                                              "aspectWidth": 2500,
                                              "canLinkExternalContent": false,
                                              "size": 1024,
                                              "viewerUrl": "test",
                                              "zoom": false,
                                              "zoomPixels": 24,
                                            },
                                            "config": Object {
                                              "canLinkExternalContent": false,
                                              "viewerUrl": "test",
                                            },
                                            "liveConfig": Object {
                                              "canLinkExternalContent": false,
                                              "viewerUrl": "test",
                                            },
                                            "panel": Object {
                                              "canLinkExternalContent": false,
                                              "height": 300,
                                              "viewerUrl": "test",
                                            },
                                          },
                                          "whitelistedConfigUrls": Array [],
                                          "whitelistedPanelUrls": Array [],
                                        }
              }
              openEditViewHandler={[Function]}
              openExtensionViewHandler={[Function]}
              secret="test"
/>,
            false,
            false,
            false,
            <Console />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "deleteExtensionViewHandler": [Function],
              "extensionViews": Array [
                Object {
                  "channelId": "twitch",
                  "features": Object {
                    "isChatEnabled": true,
                  },
                  "id": "1",
                  "isPopout": false,
                  "linked": false,
                  "linkedUserId": "",
                  "mode": "viewer",
                  "opaqueId": "ARIGopaqueId",
                  "orientation": "Portrait",
                  "role": "Logged-Out Viewer",
                  "type": "Panel",
                  "x": 0,
                  "y": 0,
                },
              ],
              "manifest": Object {
                "authorName": "test",
                "bitsEnabled": true,
                "description": "test",
                "iconUrls": Object {
                  "100x100": "test",
                },
                "id": "test",
                "name": "test",
                "requestIdentityLink": false,
                "sku": "test",
                "state": "test",
                "summary": "test",
                "vendorCode": "test",
                "version": "0.0.1",
                "views": Object {
                  "component": Object {
                    "aspectHeight": 3000,
                    "aspectWidth": 2500,
                    "canLinkExternalContent": false,
                    "size": 1024,
                    "viewerUrl": "test",
                    "zoom": false,
                    "zoomPixels": 24,
                  },
                  "config": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                  "liveConfig": Object {
                    "canLinkExternalContent": false,
                    "viewerUrl": "test",
                  },
                  "panel": Object {
                    "canLinkExternalContent": false,
                    "height": 300,
                    "viewerUrl": "test",
                  },
                },
                "whitelistedConfigUrls": Array [],
                "whitelistedPanelUrls": Array [],
              },
              "openEditViewHandler": [Function],
              "openExtensionViewHandler": [Function],
              "secret": "test",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          false,
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(RigNavComponent)
            error={undefined}
            openConfigurationsHandler={[Function]}
            openProductManagementHandler={[Function]}
            selectedView="Extension Views"
            viewerHandler={[Function]}
/>,
          <div>
            <ExtensionViewContainer
                        deleteExtensionViewHandler={[Function]}
                        extensionViews={
                                    Array [
                                                Object {
                                                  "channelId": "twitch",
                                                  "features": Object {
                                                    "isChatEnabled": true,
                                                  },
                                                  "id": "1",
                                                  "isPopout": false,
                                                  "linked": false,
                                                  "linkedUserId": "",
                                                  "mode": "viewer",
                                                  "opaqueId": "ARIGopaqueId",
                                                  "orientation": "Portrait",
                                                  "role": "Logged-Out Viewer",
                                                  "type": "Panel",
                                                  "x": 0,
                                                  "y": 0,
                                                },
                                              ]
                        }
                        manifest={
                                    Object {
                                                "authorName": "test",
                                                "bitsEnabled": true,
                                                "description": "test",
                                                "iconUrls": Object {
                                                  "100x100": "test",
                                                },
                                                "id": "test",
                                                "name": "test",
                                                "requestIdentityLink": false,
                                                "sku": "test",
                                                "state": "test",
                                                "summary": "test",
                                                "vendorCode": "test",
                                                "version": "0.0.1",
                                                "views": Object {
                                                  "component": Object {
                                                    "aspectHeight": 3000,
                                                    "aspectWidth": 2500,
                                                    "canLinkExternalContent": false,
                                                    "size": 1024,
                                                    "viewerUrl": "test",
                                                    "zoom": false,
                                                    "zoomPixels": 24,
                                                  },
                                                  "config": Object {
                                                    "canLinkExternalContent": false,
                                                    "viewerUrl": "test",
                                                  },
                                                  "liveConfig": Object {
                                                    "canLinkExternalContent": false,
                                                    "viewerUrl": "test",
                                                  },
                                                  "panel": Object {
                                                    "canLinkExternalContent": false,
                                                    "height": 300,
                                                    "viewerUrl": "test",
                                                  },
                                                },
                                                "whitelistedConfigUrls": Array [],
                                                "whitelistedPanelUrls": Array [],
                                              }
                        }
                        openEditViewHandler={[Function]}
                        openExtensionViewHandler={[Function]}
                        secret="test"
            />
            <Console />
</div>,
        ],
        "className": "rig-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "error": undefined,
            "openConfigurationsHandler": [Function],
            "openProductManagementHandler": [Function],
            "selectedView": "Extension Views",
            "viewerHandler": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ExtensionViewContainer
                deleteExtensionViewHandler={[Function]}
                extensionViews={
                                Array [
                                                Object {
                                                  "channelId": "twitch",
                                                  "features": Object {
                                                    "isChatEnabled": true,
                                                  },
                                                  "id": "1",
                                                  "isPopout": false,
                                                  "linked": false,
                                                  "linkedUserId": "",
                                                  "mode": "viewer",
                                                  "opaqueId": "ARIGopaqueId",
                                                  "orientation": "Portrait",
                                                  "role": "Logged-Out Viewer",
                                                  "type": "Panel",
                                                  "x": 0,
                                                  "y": 0,
                                                },
                                              ]
                }
                manifest={
                                Object {
                                                "authorName": "test",
                                                "bitsEnabled": true,
                                                "description": "test",
                                                "iconUrls": Object {
                                                  "100x100": "test",
                                                },
                                                "id": "test",
                                                "name": "test",
                                                "requestIdentityLink": false,
                                                "sku": "test",
                                                "state": "test",
                                                "summary": "test",
                                                "vendorCode": "test",
                                                "version": "0.0.1",
                                                "views": Object {
                                                  "component": Object {
                                                    "aspectHeight": 3000,
                                                    "aspectWidth": 2500,
                                                    "canLinkExternalContent": false,
                                                    "size": 1024,
                                                    "viewerUrl": "test",
                                                    "zoom": false,
                                                    "zoomPixels": 24,
                                                  },
                                                  "config": Object {
                                                    "canLinkExternalContent": false,
                                                    "viewerUrl": "test",
                                                  },
                                                  "liveConfig": Object {
                                                    "canLinkExternalContent": false,
                                                    "viewerUrl": "test",
                                                  },
                                                  "panel": Object {
                                                    "canLinkExternalContent": false,
                                                    "height": 300,
                                                    "viewerUrl": "test",
                                                  },
                                                },
                                                "whitelistedConfigUrls": Array [],
                                                "whitelistedPanelUrls": Array [],
                                              }
                }
                openEditViewHandler={[Function]}
                openExtensionViewHandler={[Function]}
                secret="test"
/>,
              false,
              false,
              false,
              <Console />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "deleteExtensionViewHandler": [Function],
                "extensionViews": Array [
                  Object {
                    "channelId": "twitch",
                    "features": Object {
                      "isChatEnabled": true,
                    },
                    "id": "1",
                    "isPopout": false,
                    "linked": false,
                    "linkedUserId": "",
                    "mode": "viewer",
                    "opaqueId": "ARIGopaqueId",
                    "orientation": "Portrait",
                    "role": "Logged-Out Viewer",
                    "type": "Panel",
                    "x": 0,
                    "y": 0,
                  },
                ],
                "manifest": Object {
                  "authorName": "test",
                  "bitsEnabled": true,
                  "description": "test",
                  "iconUrls": Object {
                    "100x100": "test",
                  },
                  "id": "test",
                  "name": "test",
                  "requestIdentityLink": false,
                  "sku": "test",
                  "state": "test",
                  "summary": "test",
                  "vendorCode": "test",
                  "version": "0.0.1",
                  "views": Object {
                    "component": Object {
                      "aspectHeight": 3000,
                      "aspectWidth": 2500,
                      "canLinkExternalContent": false,
                      "size": 1024,
                      "viewerUrl": "test",
                      "zoom": false,
                      "zoomPixels": 24,
                    },
                    "config": Object {
                      "canLinkExternalContent": false,
                      "viewerUrl": "test",
                    },
                    "liveConfig": Object {
                      "canLinkExternalContent": false,
                      "viewerUrl": "test",
                    },
                    "panel": Object {
                      "canLinkExternalContent": false,
                      "height": 300,
                      "viewerUrl": "test",
                    },
                  },
                  "whitelistedConfigUrls": Array [],
                  "whitelistedPanelUrls": Array [],
                },
                "openEditViewHandler": [Function],
                "openExtensionViewHandler": [Function],
                "secret": "test",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
